# pytorch-poetry-hydra-template

./: .env.template  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  init_proj.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yaml  ci.yaml
configs/: config.yaml
configs/sweep/: wandb_sweep_template.yaml
notebooks/: main.ipynb
scripts/: build.sh  build_drac_venv.sh  download_sweep_table.py  generate_main_notebook.sh  init_proj.py
scripts/slurm/: batch_build.sh
src/<<project-name>>/base/: __init__.py  function_registry.py
src/<<project-name>>/data/: __init__.py  _dataloader_registry.py
src/<<project-name>>/models/: __init__.py  model_registry.py
src/<<project-name>>/optim/: __init__.py  optim_registry.py
src/<<project-name>>/utils/: __init__.py  logging.py  logging_utils.py  wandb_utils.py
src/<package-name>/utils/: wandb_utils.py
